# Optimization-methods

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt  MultiDimensional.h  OneDimensional.h  common.h  config.h  numeric_utils.h  numeric_vector.h  rational.h  simplex.h  vector_itaretors.h
include/numerics/: common.h  numeric_matrix.h  numeric_vector.h  template_vector.h  vector_itaretors.h
src/: CMakeLists.txt  MultiDimensional.cpp  OneDimensional.cpp  main.cpp
tests/: CMakeLists.txt  oneDimensional_test.cpp
